--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,15 @@ license = {text = "BSD"}
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "panoptes-client (>=1.7.1,<2.0.0)"
+    "panoptes-client (>=1.7.1,<2.0.0)",
+    "lasair (>=0.1.2,<0.2.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^7.1.0"
+
