--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ requires-python = ">=3.13"
 dependencies = [
     "panoptes-client (>=1.7.1,<2.0.0)",
     "lasair (>=0.1.2,<0.2.0)",
-    "requests (>=2.32.5,<3.0.0)"
+    "requests (>=2.32.5,<3.0.0)",
+    "astropy (>=7.2.0,<8.0.0)",
+    "matplotlib (>=3.10.8,<4.0.0)"
 ]
 
 
